# aeternum

./: .gitignore  CLAUDE.md  QODER.md  README.md  RELEASE_NOTES.md
.claude/: settings.local.json
.claude/commands/openspec/: apply.md  archive.md  proposal.md
.claude/hooks/: session-start.sh
.claude/skills/: README.md  metadata.yaml
.claude/skills/aeternum-android/: skill.md
.claude/skills/aeternum-bridge/: skill.md
.claude/skills/aeternum-checkpoint/: skill.md
.claude/skills/aeternum-crypto/: skill.md
.claude/skills/aeternum-invariant/: skill.md
.claude/skills/aeternum-protocol/: skill.md
.github/workflows/: ci.yml
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
core/: Cargo.toml  min_test.udl  uniffi.toml
core/benches/: kdf_benchmarks.rs
core/src/: lib.rs
core/src/bridge/: engine.rs  mod.rs  session.rs  tests.rs  types.rs
core/src/crypto/: error.rs  mod.rs
core/src/crypto/aead/: mod.rs  xchacha20.rs
core/src/crypto/ecdh/: mod.rs  x25519.rs
core/src/crypto/hash/: blake3.rs  mod.rs
core/src/crypto/kdf/: argon2id.rs  mod.rs
core/src/crypto/kem/: kyber.rs  mod.rs
core/src/models/: device.rs  epoch.rs  key_hierarchy.rs  mod.rs  vault.rs
core/src/protocol/: device_mgmt.rs  epoch_upgrade.rs  error.rs  mod.rs  pqrr.rs  recovery.rs
core/src/storage/: aug.rs  error.rs  integrity.rs  invariant.rs  mod.rs  recovery.rs  shadow.rs
core/src/sync/: chaff.rs  codec.rs  frame.rs  handshake.rs  mod.rs  version.rs  wire.rs
core/tests/: sync_integration.rs
docs/: Aeternum-Project-Structure-Spec.md  Android-Key-Lifecycle-State-Machine.md
docs/arch/: Aeternum-Appendices to v5.0.md  Aeternum-architecture.md  Tech-Stack-Selection.md  Technical-Stack-Versions.md
docs/bridge/: UniFFI-Bridge-Contract.md  UniFFI-Proc-Macro-Migration.md
docs/math/: Formal-Invariants.md
docs/protocols/: Cold-Anchor-Recovery.md  Persistence-Crash-Consistency.md  Sync-Wire-Protocol.md
docs/user-guide/: User-Guide.md
openspec/: project.md
openspec/changes/implement-crypto-primitives/: proposal.md  tasks.md
openspec/specs/android-ui/: spec.md
openspec/specs/crypto/: spec.md
openspec/specs/device-management/: spec.md
openspec/specs/epoch-upgrade/: spec.md
openspec/specs/fix-bridge/: spec.md
openspec/specs/models/: spec.md
openspec/specs/pqrr-state-machine/: spec.md
openspec/specs/recovery-protocol/: spec.md
openspec/specs/storage/: spec.md
scripts/: build-core.sh  format-check.sh  generate-bridge.sh  security-audit.sh
shared/proto/: sync.proto
(+126 files in other folders)
