[package]
name = "aeternum-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.80.0"
description = "Aeternum cryptographic core - post-quantum secure key management system"
license = "MIT"
authors = ["Aeternum Team"]

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
# 基础安全
zeroize = { version = "=1.8.1", features = ["derive"] }
secrecy = "=0.8.0"
thiserror = "=1.0.61"
rand = "=0.8.5"
hex = "=0.4.3"

# 算法库 (严格匹配 Spec)
blake3 = { version = "=1.5.1", features = ["traits-preview"] }
argon2 = { version = "=0.5.3" }
chacha20poly1305 = { version = "=0.10.1" }
x25519-dalek = { version = "=2.0.1", features = ["static_secrets"] }

# 抗量子算法 (ML-KEM/Kyber)
# 注意：pqcrypto 需要 C 编译器环境，确保 Android NDK 已配置
# 使用 0.8.x 版本修复了 Windows 编译问题
pqcrypto-kyber = { version = "=0.8.1" }
pqcrypto-traits = "=0.3.5"

# 序列化与数据模型
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"

# 密钥派生
pbkdf2 = "0.12"
sha2 = "0.10"

# BIP-39 助记词
bip39 = { version = "2.0", default-features = false, features = ["std"] }

# CSPRNG for device ID generation
getrandom = "0.2"

# Storage engine dependencies
tempfile = "3.10"
parking_lot = "0.12"

# UniFFI bridging
uniffi = { version = "0.31", features = ["build", "cli"] }

[dev-dependencies]
proptest = "1.4.0"
criterion = { version = "0.5.1", features = ["html_reports"] }
tempfile = "3.10"

[build-dependencies]
uniffi = { version = "0.31", features = ["build"] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[[bench]]
name = "kdf_benchmarks"
harness = false
